# Logging

./: README.md  pyproject.toml  setup.py
EzLogger/: Logger.py  Timer.py
src/EzLogger/: Logger.py  Timer.py  __init__.py
