[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EzLogger"
version = "0.1.0"
description = ""
authors = [
    { name = "fellin" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["EzLogger"]
